kubernetes.backup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merge-freeze
spec:
  ingressClassName: "kong"
  rules:
    - host: "mergefreeze.procurify.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: merge-freeze
                port: 
                  number: 3100
